src/test/ui/uninhabited/uninhabited-irrefutable.stderr
error[E0005]: refutable pattern in local binding: `A(_)` not covered
  --> $DIR/uninhabited-irrefutable.rs:27:9
   |
LL | / enum Foo {
LL | |     A(foo::SecretlyEmpty),
LL | |     B(foo::NotSoSecretlyEmpty),
LL | |     C(NotSoSecretlyEmpty),
LL | |     D(u32),
LL | | }
   | |_- `Foo` defined here
...
LL |       let Foo::D(_y) = x;
   |           ^^^^^^^^^^ pattern `A(_)` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
